$Id: History,v 1.18 2001-05-18 17:08:19 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May 18, 2001, G.Cosmo (intercoms-V03-01-00)
- Cleared pedantic warnings detected in Linux-g++ with ISO/ANSI setup.

Mar 8, 2001, G.Cosmo (intercoms-V03-00-02)
- G4UIcommand.cc: replaced calls to entries() with size(), according
  to migration to STL vectors for G4UnitsTable and related in tag
  "global-V03-00-07".

Feb 8, 2001, M.Asai (intercoms-V03-00-01)
- Migration to STL vector classes
  affected classes :
./intercoms/include/G4UIcommand.hh
./intercoms/include/G4UIcommandTree.hh
./intercoms/include/G4UImanager.hh
./intercoms/src/G4UIcommand.cc
./intercoms/src/G4UIcommandTree.cc
./intercoms/src/G4UImanager.cc

Jul 26, 00, M.Asai (tag intercoms-V02-00-01)
- Retagging with removing G4StateManager, G4VStateDependent and G4ApplicationState
  classes.

Jul 22, 00, M.Asai (tag intercoms-V02-00-00)
- Making G4UImanager as a state dependent class.
- Remove G4StateManager and G4VStateDependent classes. They are now in
  source/global/management.

May 18, 00, J.Allison
- Small spelling correction in class description of G4VGraphicsScene.hh.

Feb 14, 00, M.Asai (tag intercoms-V01-00-00)